--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,55 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #222831; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header-container{
+  position: fixed;
+  width: 100%;
+  height: 8%;
+  background-color: #222831;
+  color: aliceblue;
+  margin: auto;
+}
+
+.header-container .nav{
+  margin-left: 35%;
+  margin-right: 35%;
+}
+
+.header-container .nav-link{
+  color: aliceblue;
+}
+
+.header-container .navName:hover img{
+  transform: rotate(20deg);
+}
+
+.header-container .nav-link:hover{
+  color: antiquewhite;
+}
+
+.header-container .navName img{
+  aspect-ratio: 1/1;
+  width: 30px;
+  margin-right: 10px;
+}
+
+.headerDiv{
+  padding-bottom: 300px;
+}
+
+.model{
+  width: fit-content;
+  height: 300px;
+  border: solid 1px black;
+  margin: auto;
+  margin-top: -190px;
+}
+
