--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #222831; */
+  background-color: #393E46;
+  color: aliceblue;
+
 }
 
 code {
@@ -20,11 +23,12 @@ code {
   background-color: #222831;
   color: aliceblue;
   margin: auto;
+  backdrop-filter: blur(8%);
+  z-index: 9999;
 }
 
 .header-container .nav{
-  margin-left: 35%;
-  margin-right: 35%;
+
 }
 
 .header-container .nav-link{
@@ -47,13 +51,175 @@ code {
 
 .headerDiv{
   padding-bottom: 300px;
+  z-index: 9999999;
 }
 
 .model{
   width: fit-content;
   height: 300px;
-  border: solid 1px black;
+  /* border: solid 1px black; */
   margin: auto;
-  margin-top: -190px;
+  margin-top: -230px;
+  z-index: 9;
+}
+
+.profilePic{
+  aspect-ratio: 1/1;
+  width: 10vw;
+  border: solid 1px white;
+  border-radius: 50%;
+  /* margin-left: 60px; */
+}
+
+@media (max-width:420px) {
+  .profilePic{
+    aspect-ratio: 1/1;
+    width: 20vw;
+    border: solid 1px white;
+    border-radius: 50%;
+    /* margin-left: 60px; */
+  }
+  body{
+    font-size: smaller;
+  }
+  .mainIntro-container{
+    min-width: 80%;
+  }
+
+  .skills img{
+    max-width:60px;
+  }
+}
+
+@media (min-width:1100px){
+  .nameIntro .right{
+    margin-left: -250px;
+    padding: 30px 0;
+  }
+}
+
+.mainIntro-container{
+  /* border: solid 1px white; */
+  width: 50%;
+  margin: auto;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+       animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+.mainIntro-container .aboutMe{
+  margin-top: 10%;
+}
+
+
+
+.mainIntro-container h2{
+  border-bottom: solid 1px white;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+
+.Bios{
+  margin-top: 50px;
+}
+
+.Bios .list-group-item{
+  background-color: #393E46;
+  color: aliceblue;
+  display: flex;
+}
+
+.Bios .list-group-item .left{
+  margin-right: 3%;
+}
+
+
+.skills{
+  margin-top: 30px;
+}
+.skills .skills-logo-container{
+  /* border: outset 1px white;
+  border-radius: 20px; */
+  border: 2mm ridge rgba(229, 229, 217, 0.6);
+  border-radius: 20px;
+}
+.skills-logo-container{
+  text-align: center;
+}
+
+.skills img{
+  width: 140px;
+  margin: 20px 20px 20px 20px;
+}
+
+.socialMedia{
+  margin-top: 30px;
+}
+.socialMedia .list-group-item{
+  background-color:#393E46;
+  color:aliceblue;
+  border: none;
+}
+
+.socialMedia .list-group-item a{
+  text-decoration: none;
+  color: aliceblue;
+  padding: 5px 5px 5px 5px;
+}
+
+.socialMedia .list-group-item a:hover{
+  color:#71C9CE;
+  border:solid 1px;
+  border-radius: 5px;
+  background-color: #E3FDFD;
+  
+}
+
+
+
+.socialMedia .list-group-item a svg{
+  margin-right: 5px;
+  aspect-ratio: 1/1;
+  width: 20px;
+  margin-top: -2px;
+}
+
+
+footer{
+  margin-top: 10px;
+  text-align: center;
+  font-size:small;
+  opacity: 0.5;
 }
 
